--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "libselinux-2.0.78.tgz": 4ea27ff6593f69aa0baab721ce3b32c42437a943
+  libselinux-2.4.tar.gz: bc424260dee281b3853ca4fcb2af6e8362b475b1
