--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   libselinux-3.0.tar.gz: 2b948274ba4cbd9ad9e8d0994961457007d74d48
+  libselinux-3.4.tar.gz: 1fff75ad31eca7979740af01279d868ca8cbd249
